--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,16 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/uo-cmor/SF6Dvalues
 BugReports: https://github.com/uo-cmor/SF6Dvalues/issues
+Imports: 
+    checkmate,
+    cli,
+    dplyr,
+    glue,
+    methods,
+    purrr,
+    rlang,
+    usethis,
+    vctrs
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
