add extractor functions for SF6D/SF12

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,12 @@ S3method(conditionMessage,SF6Dvalues_error_invalid_responses)
 S3method(conditionMessage,SF6Dvalues_error_invalid_version)
 S3method(conditionMessage,SF6Dvalues_error_not_implemented)
 S3method(conditionMessage,SF6Dvalues_error_unnamed_questions)
+S3method(conditionMessage,SF6Dvalues_unknown_dimension)
+S3method(conditionMessage,SF6Dvalues_unknown_question)
 S3method(conditionMessage,SF6Dvalues_warning_too_many_questions)
 S3method(conditionMessage,SF6Dvalues_warning_unnamed_questions)
+S3method(extract,SF6Dvalues_SF12)
+S3method(extract,SF6Dvalues_SF6D)
 S3method(format,SF6Dvalues_SF12)
 S3method(format,SF6Dvalues_SF6D)
 S3method(vec_cast,SF6Dvalues_SF12.SF6Dvalues_SF12)
@@ -23,6 +27,7 @@ export(SF12)
 export(SF6D)
 export(as_SF12)
 export(as_SF6D)
+export(extract)
 export(is_SF12)
 export(is_SF6D)
 export(sf6d_profile)
