add sf12_PCS() and sf12_MCS()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,13 @@ S3method(conditionMessage,SF6Dvalues_error_invalid_questions)
 S3method(conditionMessage,SF6Dvalues_error_invalid_response_levels)
 S3method(conditionMessage,SF6Dvalues_error_invalid_responses)
 S3method(conditionMessage,SF6Dvalues_error_invalid_version)
+S3method(conditionMessage,SF6Dvalues_error_not_SF12)
 S3method(conditionMessage,SF6Dvalues_error_not_SF6D)
 S3method(conditionMessage,SF6Dvalues_error_not_implemented)
 S3method(conditionMessage,SF6Dvalues_error_unknown_dimension)
 S3method(conditionMessage,SF6Dvalues_error_unknown_question)
 S3method(conditionMessage,SF6Dvalues_error_unnamed_questions)
+S3method(conditionMessage,SF6Dvalues_error_version_1)
 S3method(conditionMessage,SF6Dvalues_warning_too_many_questions)
 S3method(conditionMessage,SF6Dvalues_warning_unnamed_questions)
 S3method(extract,SF6Dvalues_SF12)
@@ -24,6 +26,8 @@ S3method(vec_ptype2,SF6Dvalues_SF12.SF6Dvalues_SF12)
 S3method(vec_ptype2,SF6Dvalues_SF6D.SF6Dvalues_SF6D)
 S3method(vec_ptype_full,SF6Dvalues_SF12)
 S3method(vec_ptype_full,SF6Dvalues_SF6D)
+export(MCS)
+export(PCS)
 export(SF12)
 export(SF6D)
 export(as_SF12)
@@ -31,6 +35,8 @@ export(as_SF6D)
 export(extract)
 export(is_SF12)
 export(is_SF6D)
+export(sf12_MCS)
+export(sf12_PCS)
 export(sf6d_profile)
 export(sf6d_utility)
 export(uk)
