add SF12_scores() for SF-12 domain scale scores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(vec_ptype_full,SF6Dvalues_SF6D)
 export(MCS)
 export(PCS)
 export(SF12)
+export(SF12_scores)
 export(SF6D)
 export(as_SF12)
 export(as_SF6D)
