add `SF36` class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,22 +19,30 @@ S3method(conditionMessage,SF6Dvalues_warning_unnamed_questions)
 S3method(extract,SF6Dvalues_SF12)
 S3method(extract,SF6Dvalues_SF6D)
 S3method(format,SF6Dvalues_SF12)
+S3method(format,SF6Dvalues_SF36)
 S3method(format,SF6Dvalues_SF6D)
+S3method(pillar_shaft,SF6Dvalues_SF36)
 S3method(vec_cast,SF6Dvalues_SF12.SF6Dvalues_SF12)
+S3method(vec_cast,SF6Dvalues_SF36.SF6Dvalues_SF36)
 S3method(vec_cast,SF6Dvalues_SF6D.SF6Dvalues_SF6D)
 S3method(vec_ptype2,SF6Dvalues_SF12.SF6Dvalues_SF12)
+S3method(vec_ptype2,SF6Dvalues_SF36.SF6Dvalues_SF36)
 S3method(vec_ptype2,SF6Dvalues_SF6D.SF6Dvalues_SF6D)
 S3method(vec_ptype_full,SF6Dvalues_SF12)
+S3method(vec_ptype_full,SF6Dvalues_SF36)
 S3method(vec_ptype_full,SF6Dvalues_SF6D)
 export(MCS)
 export(PCS)
 export(SF12)
 export(SF12_scores)
+export(SF36)
 export(SF6D)
 export(as_SF12)
+export(as_SF36)
 export(as_SF6D)
 export(extract)
 export(is_SF12)
+export(is_SF36)
 export(is_SF6D)
 export(sf12_MCS)
 export(sf12_PCS)
@@ -43,3 +51,4 @@ export(sf6d_utility)
 export(uk)
 export(utility)
 import(vctrs)
+importFrom(pillar,pillar_shaft)
