add Australian population value set

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as_SF6D,SF6Dvalues_SF12)
 S3method(as_SF6D,SF6Dvalues_SF36)
 S3method(as_SF6D,default)
+S3method(conditionMessage,SF6Dvalues_error_incompatible_values)
 S3method(conditionMessage,SF6Dvalues_error_invalid_SF12_questions)
 S3method(conditionMessage,SF6Dvalues_error_invalid_SF36_questions)
 S3method(conditionMessage,SF6Dvalues_error_invalid_dimension_levels)
@@ -49,6 +50,7 @@ export(extract)
 export(is_SF12)
 export(is_SF36)
 export(is_SF6D)
+export(oz)
 export(sf12_MCS)
 export(sf12_PCS)
 export(sf6d_profile)
