add SF-36 domain scale scores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ S3method(as_SF6D,SF6Dvalues_SF12)
 S3method(as_SF6D,SF6Dvalues_SF36)
 S3method(as_SF6D,default)
 S3method(conditionMessage,SF6Dvalues_error_incompatible_values)
+S3method(conditionMessage,SF6Dvalues_error_incorrect_type)
 S3method(conditionMessage,SF6Dvalues_error_invalid_SF12_questions)
 S3method(conditionMessage,SF6Dvalues_error_invalid_SF36_questions)
 S3method(conditionMessage,SF6Dvalues_error_invalid_dimension_levels)
 S3method(conditionMessage,SF6Dvalues_error_invalid_response_levels)
 S3method(conditionMessage,SF6Dvalues_error_invalid_responses)
 S3method(conditionMessage,SF6Dvalues_error_invalid_version)
-S3method(conditionMessage,SF6Dvalues_error_not_SF12)
 S3method(conditionMessage,SF6Dvalues_error_not_SF6D)
 S3method(conditionMessage,SF6Dvalues_error_not_implemented)
 S3method(conditionMessage,SF6Dvalues_error_unknown_dimension)
@@ -23,6 +23,7 @@ S3method(conditionMessage,SF6Dvalues_warning_too_many_SF36_questions)
 S3method(conditionMessage,SF6Dvalues_warning_unnamed_SF12_questions)
 S3method(conditionMessage,SF6Dvalues_warning_unnamed_SF36_questions)
 S3method(extract,SF6Dvalues_SF12)
+S3method(extract,SF6Dvalues_SF36)
 S3method(extract,SF6Dvalues_SF6D)
 S3method(format,SF6Dvalues_SF12)
 S3method(format,SF6Dvalues_SF36)
@@ -42,6 +43,7 @@ export(PCS)
 export(SF12)
 export(SF12_scores)
 export(SF36)
+export(SF36_scores)
 export(SF6D)
 export(as_SF12)
 export(as_SF36)
