add national SF-6D(SF-36) value sets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,15 +48,19 @@ export(SF6D)
 export(as_SF12)
 export(as_SF36)
 export(as_SF6D)
+export(erum)
 export(extract)
+export(hk)
 export(is_SF12)
 export(is_SF36)
 export(is_SF6D)
 export(oz)
+export(portugal)
 export(sf12_MCS)
 export(sf12_PCS)
 export(sf6d_profile)
 export(sf6d_utility)
+export(spain)
 export(uk)
 export(utility)
 import(vctrs)
